--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 * {
     margin: 0;
     padding: 0;
+    border: 0;
+    line-height: 1.4em;
+    vertical-align: baseline;
+    text-decoration: none;
+    outline: 0;
 }
 
 body {
@@ -21,6 +26,9 @@ td {
     text-align: center;
     font-size: 34px;
     color: red;
+    min-width: 40px;
+    max-height: 40px;
+    overflow: hidden;
 }
 
 #main {
@@ -31,7 +39,6 @@ td {
     width: 48%;
     height: 80%;
     float: left;
-    margin: 1%;
 }
 
 #l_left {
@@ -45,14 +52,13 @@ td {
 }
 
 #right {
-    width: 48%;
-    height: 80%;
-    float: left;
-    margin: 1%;
+    text-align: center;
+    margin: 0 auto;
+    width: 60%;
 }
 
 p.info {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: bold;
 }
 
@@ -90,19 +96,46 @@ p.info {
 
 #d_info {
     margin: 0 auto;
-    margin-top: 20px;
-    width: 40%;
-    height: 40px;
+    width: 80%;
     border: 1px solid black;
     font-size: 28px;
+    margin-top: 10px;
 }
 
 #d_info2 {
     text-align: center;
     margin: 0 auto;
-    margin-top: 20px;
-    width: 40%;
+    width: 80%;
     height: 120px;
     border: 1px solid black;
     font-size: 20px;
+    margin-top: 5px;
+}
+
+@media only screen and (max-width: 768px) {
+    html {
+        width: 100%;
+    }
+    body {
+        width: 100%;
+        zoom: 0.45;
+    }
+    #main {
+        width: 100%;
+        height: 100%;
+    }
+    #left {
+        width: 100%;
+    }
+    #l_left {
+        float: left;
+        width: 27%;
+        margin-left: 3%;
+    }
+    #l_right {
+        float: left;
+        width: 70%;
+    }
+    #right {}
+    #down {}
 }
