--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@
 
 body {
     width: 100%;
-    height: 100%;
-    overflow: hidden;
+    zoom: 0.9;
 }
 
 table {
     border: 2px solid black;
     border-collapse: collapse;
+    margin: 0 auto;
 }
 
 td {
@@ -37,8 +37,7 @@ td {
 
 #left {
     width: 50%;
-    height: 80%;
-    float: left;
+    margin: 0 auto;
 }
 
 #l_left {
@@ -54,13 +53,20 @@ td {
 #right {
     text-align: center;
     width: 50%;
-    float: left;
     margin: 0 auto;
 }
 
 p.info {
     font-size: 28px;
     font-weight: bold;
+    text-align: center;
+}
+
+p.info_2 {
+    font-size: 28px;
+    font-weight: bold;
+    text-align: center;
+    display: inline;
 }
 
 #down {
@@ -79,18 +85,20 @@ p.info {
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: rgb(19, 60, 192);
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .button:hover {
-    background-color: #3e8e41
+    background-color: rgb(59, 91, 196);
 }
 
 .button:active {
-    background-color: #3e8e41;
+    background-color: rgb(19, 60, 192);
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
@@ -123,10 +131,10 @@ p.info {
     }
     #main {
         width: 100%;
-        height: 100%;
     }
     #left {
         width: 100%;
+        height: 40%;
     }
     #l_left {
         float: left;
@@ -140,6 +148,12 @@ p.info {
     #right {
         text-align: center;
         margin: 0 auto;
-        width: 60%;
+        height: 40%;
+        width: 100%;
+    }
+    #down {
+        width: 100%;
+        height: 20%;
+        text-align: center;
     }
 }
